# DummyExtension

./: .gitignore  CMakeLists.txt  README.md  pymain.cpp  setup.py
mypackage/: __init__.py  subA.py  subB.py
